--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context="com.raywenderlich.android.alltherecipes.MainActivity">
+  tools:context="com.sabin.android.forkrecipe.MainActivity">
 
     <ListView
         android:id="@+id/recipe_list_view"
