--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -4,62 +4,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/recipe_list_thumbnail"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="6dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="6dp"
-        android:contentDescription="@string/thumbnail"
-        android:scaleType="centerInside"
-        tools:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:id="@+id/recipe_list_detail"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="4dp"
-        android:maxLines="1"
-        android:paddingEnd="4dp"
-        android:textColor="#000000"
-        android:textSize="12sp"
-        tools:text="Detail" />
+        android:foregroundGravity="bottom"
+        card_view:cardElevation="10dp"
+        card_view:cardCornerRadius="10dp"
+        android:layout_margin="10dp"
+        android:id="@+id/card_view">
 
-    <RelativeLayout
-        android:id="@+id/recipe_list_text_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/recipe_list_thumbnail"
-        android:layout_toStartOf="@id/recipe_list_detail">
-
-        <TextView
-            android:id="@+id/recipe_list_title"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:textSize="18sp"
-            tools:text="Title" />
+            android:id="@+id/relative_layout_1">
 
-        <TextView
-            android:id="@+id/recipe_list_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/recipe_list_title"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="2dp"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:textSize="16sp"
-            tools:text="Subtitle" />
+            <ImageView
+                android:id="@+id/recipe_list_thumbnail"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/thumbnail"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                tools:src="@mipmap/ic_launcher"
+                />
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/recipe_list_text_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/cardview_light_background">
+
+                <TextView
+                    android:id="@+id/recipe_list_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:textSize="24sp"
+                    tools:text="Title"
+                    tools:textStyle="bold"
+                    android:textColor="@color/black"/>
+
+                <TextView
+                    android:id="@+id/recipe_list_subtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/recipe_list_title"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginRight="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:textSize="18sp"
+                    tools:text="Subtitle"
+                    android:textColor="@color/gray"/>
+
+            </RelativeLayout>
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
