--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
   <color name="colorLowSodium">#F4D03F</color>
   <color name="colorLowFat">#F2784B</color>
   <color name="colorVegetarian">#26A65B</color>
+  <color name="black">#000000</color>
+  <color name="gray">#555555</color>
 </resources>
