--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,27 @@
   android:layout_height="match_parent"
   tools:context="com.sabin.android.forkrecipe.MainActivity">
 
-    <ListView
-        android:id="@+id/recipe_list_view"
+
+    
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigationView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:divider="@null"
-        android:dividerHeight="0dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:itemBackground="@color/cardview_light_background"
+        app:itemIconTint="@color/gray"
+        app:itemTextColor="@color/gray"
+        app:menu="@menu/bottom_nav_menu"/>
 
 
 </android.support.constraint.ConstraintLayout>
