--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -9,9 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:foregroundGravity="bottom"
-        card_view:cardElevation="10dp"
+        card_view:cardElevation="8dp"
         card_view:cardCornerRadius="10dp"
-        android:layout_margin="10dp"
+        android:layout_margin="8dp"
         android:id="@+id/card_view">
 
         <RelativeLayout
@@ -34,7 +34,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:background="@color/cardview_light_background">
+                android:background="@color/cardview_light_background"
+                >
 
                 <TextView
                     android:id="@+id/recipe_list_title"
@@ -45,7 +46,10 @@
                     android:textSize="24sp"
                     tools:text="Title"
                     tools:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:layout_toStartOf="@id/toggleButtonDrawable"
+                    android:layout_alignParentStart="true"
+                    />
 
                 <TextView
                     android:id="@+id/recipe_list_subtitle"
@@ -60,7 +64,23 @@
                     android:maxLines="2"
                     android:textSize="18sp"
                     tools:text="Subtitle"
-                    android:textColor="@color/gray"/>
+                    android:textColor="@color/gray"
+                    android:layout_toStartOf="@id/toggleButtonDrawable"
+                    android:layout_alignParentStart="true"
+                    />
+
+                <ToggleButton
+                    android:id="@+id/toggleButtonDrawable"
+                    android:padding="4dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/favorite_toggle"
+                    android:checked="false"
+                    android:textOff=""
+                    android:textOn=""
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@id/recipe_list_subtitle"
+                    />
 
             </RelativeLayout>
         </RelativeLayout>
