Added categories and search bar. The search bat isn't working currently

--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -26,7 +26,7 @@
                 android:contentDescription="@string/thumbnail"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
-                tools:src="@mipmap/ic_launcher"
+                tools:src="@drawable/ic_fork_red"
                 />
 
             <RelativeLayout
