--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,7 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <SearchView
         android:id="@+id/search_view"
@@ -18,7 +20,8 @@
         android:clickable="true"
         android:focusable="true"
         android:iconifiedByDefault="false"
-        android:focusableInTouchMode="true"
+        android:queryHint="@string/searchToolTipText"
+
 
         />
     <ListView
