--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,15 +3,15 @@
 
     <item
         android:id="@+id/navigation_new"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_new"
         android:title="@string/navigation_new"/>
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_action_search_black"
         android:title="@string/navigation_search"/>
     <item
         android:id="@+id/navigation_favorites"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_action_star_full_black"
         android:title="@string/navigation_favorites"/>
 
 </menu>
