--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,24 +6,32 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
-    <SearchView
-        android:id="@+id/search_view"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/search_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/bg_white_rounded"
-        android:elevation="5dp"
-        android:searchIcon="@drawable/ic_action_search_black"
-        android:clickable="true"
-        android:focusable="true"
-        android:iconifiedByDefault="false"
-        android:queryHint="@string/searchToolTipText"
-
-
-        />
+        app:layout_constraintLeft_toLeftOf="parent">
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@drawable/bg_white_rounded"
+            android:elevation="5dp"
+            android:searchIcon="@drawable/ic_action_search_black"
+            android:clickable="true"
+            android:focusable="auto"
+            android:focusableInTouchMode="true"
+            android:iconifiedByDefault="false"
+            android:queryHint="@string/searchToolTipText"
+            />
+    </android.support.v7.widget.Toolbar>
     <ListView
         android:id="@+id/category_list_view"
         android:layout_width="0dp"
@@ -36,6 +44,9 @@
         android:divider="@null"
         android:dividerHeight="0dp"
         android:paddingTop="60dp"
-        android:clipToPadding="false"/>
+        android:clipToPadding="false"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
+        />
 
 </android.support.constraint.ConstraintLayout>
